# wehelp-deep-learning-bootcamp

./: .gitignore
neural_network/: activation.py
phase-1/neural_network/: loss_function.py  network.py
phase-1/week-5/: activation.py  main.py
phase-1/week-6/: main.py
phase-2/: 0414-1830-88-95.classify.model  0421-2228-89-96.model  0422-2333-94-98.classify.model  Assignment.md  classify.py  corpus_utils.py  embedding.py  example-data.csv  example-data.csv.pt  generate_confusion_matrix.py  generate_corpus.py  main.py  pyproject.toml  read_corpus.py  requirements.txt  tokenizer.py  transform.py  utils.py
phase-2/scripts/: generate_corpus.py  parsing_model.py  vectorize_documents.py
phase-2/static/css/: styles.css
phase-2/static/js/: app.js
phase-2/templates/: index.html
phase-2/week-1/: crawler.py  extract.py  transform.py
phase-3/week-1/: main.py
phase-3/week-2/: .gitignore  draw_bounding_box.py  main.py
phase-3/week-3/: .gitignore  data.py  generate.py  main.py
phase-3/week-3/data/: data.json
week-1/: web-crawler.py
week-2/: attachments.py
week-3/python/: attachments.py
week-4/: attachments.py
week-5/: activation.py  loss_function.py  main.py  network.py
week-6/: activation.py  loss_function.py  main.py  network.py  utils.py
week-7/: main.py  task_1.py  task_2.py
