[project]
name = "week-1"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
    "ckip-transformers>=0.3.4",
    "pandas>=2.2.3",
    "scrapy>=2.12.0",
    "gensim>=4.3.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "fastapi[standard]>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.setuptools]
packages = ["."]
exclude = ["logs", "data", "output", "clean_data"]
